Add script to parse output of the auditd af_unix socket
This converts auditd messages into our specified log file format
for system logs and submits to syslog-ng for database insertion.

A few audit keys are also changed to correspond with event
types registered for auditd.

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Homepage: http://www.truenas.com
 
 Package: truenas-audit-rules
 Architecture: any
-Depends: truenas-files, ${misc:Depends}, ${shlibs:Depends}
+Depends: python3:any, truenas-files, ${misc:Depends}, ${shlibs:Depends}
 Description: Auditd rules for TrueNAS when STIG compatibiliy mode
  enabled.
