--- a/systemd/tnaudit.service
+++ b/systemd/tnaudit.service
@@ -2,14 +2,14 @@
 Description=TrueNAS Auditd Handler
 DefaultDependencies=no
 
-# Restart this service concurrently with auditd
-PartOf=auditd.service
+# the auditd.service file has
+# Upholds=tnaudit.service
+After=auditd.service
 
 [Service]
 Type=exec
 ExecStart=/usr/local/libexec/truenas_audit_handler.py
 SendSIGKILL=no
-Restart=on-failure
 MemoryDenyWriteExecute=true
 LockPersonality=true
 ProtectControlGroups=true
